<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mexpense.m_expense.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="com.mexpense.m_expense.TakePhotoFragrment"
        android:label="@string/camera"
        tools:layout="@layout/fragment_takephoto" />

    <fragment
        android:id="@+id/nav_location"
        android:name="com.mexpense.m_expense.LocationFragment"
        android:label="@string/location"
        tools:layout="@layout/fragment_location" />
    <fragment
        android:id="@+id/nav_youtube"
        android:name="com.mexpense.m_expense.YoutubeFragment"
        android:label="@string/youtube"
        tools:layout="@layout/fragment_youtube" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mexpense.m_expense.SettingsFragment"
        android:label="Settings"/>
    <fragment
        android:id="@+id/nav_help"
        android:name="com.mexpense.m_expense.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />
</navigation>